# grid-board-tab5

./: .gitignore  C6_COMMUNICATION.md  C6_FLASHING_GUIDE.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LVGL_ROTATION_CHALLENGE_SUMMARY.md  PUBLISH_TO_GITHUB.md  README.md  build_c6_slave.sh  delete_c6_backup.py  flash_c6.sh  flash_c6_direct.py  flash_c6_firmware.c  flash_c6_firmware.sh  flash_c6_slave.sh  grid_board_simple_app.cpp  grid_board_simple_app.h  idf_component.yml  integration_example.md  partitions.csv  prepare_sd_card.sh  read_serial.py  reset_and_read.py  restore_firmware.py  sdkconfig  sdkconfig.defaults
assets/: Tab5.avif
backups/20250826_181912/: README.txt  SHA256SUMS.txt  flash_app_args  flash_backup.sh  flash_project_args  flasher_args.json
c6_flasher_firmware/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  Kconfig.projbuild  NotoEmoji64.c  ShareTech140.c  app_c6_ota.cpp  app_c6_ota.h  app_main.cpp  ble_server.c  ble_server.h  bleprph.h  c6_firmware_prepare.c  c6_firmware_prepare.h  c6_flasher.c  c6_sd_firmware_loader.c  c6_sd_firmware_loader.h  c6_uart_bridge.c  card.pcm  delete_backup.c  gatt_svr.c  grid_board.cpp  grid_board.hpp  idf_component.yml  main.cpp  main_simple.cpp  main_standalone.cpp  sd_card_helper.c  sd_card_helper.h  sdio_communication.c  sdio_communication.h  tab5_c6_integration.c  test_c6_bridge.cpp  wifi_compat.h
main/hal/: hal_esp32.cpp
main/hal/components/: hal_wifi.cpp
scripts/: flash.sh  monitor.sh
test_flash_c6/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
wifi_c6_fw/: serve_firmware.py
(+5 files in other folders)
